fix(admin): issue when the img are invisible and fix some broken css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1015,6 +1015,8 @@ body {
   display: flex;
   justify-content: center;
   filter: blur(30px);
+  width: 100%;
+  height: 100%;
 }
 
 /* Style pour l'image de la lettre */
@@ -1032,16 +1034,17 @@ body {
   max-height: 100%;
 }
 
-/* .letter-image {
+.letter-image-admin {
   max-width: -webkit-fill-available;
   cursor: pointer;
 }
 
-.letter-image.admin {
+.letter-image-admin {
   max-width: 50%;
   cursor: pointer;
 }
 
+/*
 .letter-image.zoomed {
   object-fit: contain;
 } */
@@ -1267,10 +1270,11 @@ body {
   min-width: 100%;
 }
 
-/* .letter-image-validation {
+.letter-image-validation {
   cursor: pointer;
-  width: 70%;
-} */
+  width: 528px;
+  height: 300px;
+}
 
 #admin-tweet-validation-container {
   width: 90%;
